--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=usuario
-
-spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:mem:mymemdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+##spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/pokemonapicourse
+##spring.datasource.url=jdbc:hsqldb:mem:mymemdb;DB_CLOSE_DELAY=-1
+spring.datasource.username=postgres
+##spring.datasource.username=sa
+spring.datasource.password=postgres
+##spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 
 spring.main.banner-mode=off
